feature: delete contact.
